[package]
name = "forester-examples"
description = "Examples to work with forester"
authors = ["BorisZhguchev <zhguchev@hotmail.com>"]
homepage = "https://github.com/besok/forester"
repository = "https://github.com/besok/forester"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
forester-rs = {path = "../forester",version = "0.3.0"}
